Fix all spacing errors

--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,9 @@ html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
-  font: normal 100%/1.5 sans-serif;
+  font: normal 100%/1.3 sans-serif;
   background-color: #f2f2f2;
-  line-height: 1.5;
+  line-height: 1.5rem;
 }
 
 *, *::before, *::after {
@@ -36,7 +36,7 @@ h1 {
   text-align: center;
   text-decoration: underline;
   font-size: 4rem;
-  font-family: "Anton", sans-serif;
+  font-family: Anton, sans-serif;
   margin-bottom: 0;
   line-height: 1.5em;
 }
@@ -82,14 +82,14 @@ h2 {
   padding-left: .4em;
   padding-top: 1em;
   padding-bottom: 1px;
-  font-family: "Anton", sans-serif;
+  font-family: Anton, sans-serif;
 }
 
 p {
   font-size: .875rem;
   margin: 0;
   padding-left: .4em;
-  font-family: "Heebo", sans-serif;
+  font-family: Heebo, sans-serif;
 }
 
 .lava {
@@ -123,7 +123,7 @@ p {
 .chef {
   width: 100%;
   display: inline;
-  font-family: "Heebo", sans-serif;
+  font-family: Heebo, sans-serif;
 }
 
 h3 {
@@ -136,13 +136,13 @@ h3 {
 h4 {
   text-align: center;
   font-size: 1em;
-  font-family: "Heebo", sans-serif;
+  font-family: Heebo, sans-serif;
 }
 
 h5 {
   text-align: center;
   font-size: 1.5rem;
-  font-family: "Anton", sans-serif;
+  font-family: Anton, sans-serif;
   margin-top: 0;
   margin-bottom: .5em;
 }
@@ -215,7 +215,7 @@ a:hover {
 
   html {
     font-size: 110%;
-    line-height: 1.3em;
+    line-height: 1.4;
   }
 
   div {
@@ -253,7 +253,7 @@ a:hover {
 
   html {
     font-size: 120%;
-    line-height: 1.4em;
+    line-height: 1.5;
   }
 
   header .logo-left {
